--- a/Therm_MsFEM_2D/Therm_MsFEM_2D/Therm_MsFEM_2D.vcxproj.filters
+++ b/Therm_MsFEM_2D/Therm_MsFEM_2D/Therm_MsFEM_2D.vcxproj.filters
@@ -1,30 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Исходные файлы">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Файлы заголовков">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Файлы ресурсов">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Intarfaces">
+      <UniqueIdentifier>{68c78cf5-2ffd-4610-a0a2-6dc822e6f309}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="One Dimension FEM">
+      <UniqueIdentifier>{4644490f-5da7-4af5-8037-7398e74b2b5c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Two Dimensions FEM">
+      <UniqueIdentifier>{712d2b99-b448-4d55-9c4f-f5d7fc2fe35d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="MsFEM">
+      <UniqueIdentifier>{f5a9863f-07e3-41e2-a81b-2a1fa2654620}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SLAU Solvers">
+      <UniqueIdentifier>{c25250d5-723e-40b5-8fed-541402a8bca8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SLAU Solvers\LOS">
+      <UniqueIdentifier>{08e93104-f79d-4511-8a3e-477a148c5970}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="local_optimal_scheme.h">
+    <ClInclude Include="libraries.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="libraries.h">
-      <Filter>Файлы ресурсов</Filter>
+    <ClInclude Include="finite_elements_method_intarface.h">
+      <Filter>Intarfaces</Filter>
+    </ClInclude>
+    <ClInclude Include="one_dimensional_task.h">
+      <Filter>One Dimension FEM</Filter>
+    </ClInclude>
+    <ClInclude Include="two_dimensional_task.h">
+      <Filter>Two Dimensions FEM</Filter>
+    </ClInclude>
+    <ClInclude Include="therm_msfem.h">
+      <Filter>MsFEM</Filter>
+    </ClInclude>
+    <ClInclude Include="local_optimal_scheme.h">
+      <Filter>SLAU Solvers\LOS</Filter>
+    </ClInclude>
+    <ClInclude Include="boundaryData.h">
+      <Filter>Two Dimensions FEM</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="one_dimensional_task.cpp">
+      <Filter>One Dimension FEM</Filter>
+    </ClCompile>
+    <ClCompile Include="two_dimensional_task.cpp">
+      <Filter>Two Dimensions FEM</Filter>
+    </ClCompile>
+    <ClCompile Include="therm_msfem.cpp">
+      <Filter>MsFEM</Filter>
+    </ClCompile>
     <ClCompile Include="local_optimal_scheme.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>SLAU Solvers\LOS</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
